--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.aiChatBot.AiFragment">
+    tools:context=".ui.aiChatBot.AiChatFragment">
 
     <com.stfalcon.chatkit.messages.MessagesList
         android:id="@+id/messagesList2"
@@ -67,3 +68,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
