--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -62,7 +62,7 @@
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
-        android:name="com.example.pathfinder.ui.aiChatBot.AiFragment"
+        android:name="com.example.pathfinder.ui.aiChatBot.AiChatFragment"
         android:label="fragment_chat"
         tools:layout="@layout/fragment_ai_chat" />
     <fragment
