--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,15 @@
         <item name="android:textColor">@color/mainColor</item>
     </style>
 
+    <resources>
+
+        <style name="CommonButtonStyle">
+            <item name="android:layout_width">match_parent</item>
+            <item name="android:layout_height">50dp</item>
+            <item name="android:background">@drawable/background_radius_maincolor</item>
+            <item name="android:textColor">@color/white</item>
+        </style>
+
+    </resources>
+
 </resources>
