--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,18 +6,20 @@
         <item name="android:padding">8dp</item>
         <item name="android:layout_margin">4dp</item>
         <item name="android:background">@drawable/tag_background</item>
-        <item name="android:textColor">@color/mainColor</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+
+
     </style>
 
-    <resources>
 
-        <style name="CommonButtonStyle">
-            <item name="android:layout_width">match_parent</item>
-            <item name="android:layout_height">50dp</item>
-            <item name="android:background">@drawable/background_radius_maincolor</item>
-            <item name="android:textColor">@color/white</item>
-        </style>
+    <style name="CommonButtonStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/background_radius_maincolor</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
-    </resources>
+
 
 </resources>
