--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -3,117 +3,126 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.board.view.BoardInsideActivity">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <!-- Title Bar ConstraintLayout -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/titleBarLayout"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                tools:context=".ui.board.view.BoardInsideActivity">
+            <TextView
+                android:id="@+id/titleArea"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:gravity="center"
+                android:text="title"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/boardSettingIcon" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp">
+            <ImageView
+                android:id="@+id/boardSettingIcon"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="18dp"
+                android:src="@drawable/main_menu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                        <TextView
-                            android:id="@+id/titleArea"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="50dp"
-                            android:layout_marginRight="50dp"
-                            android:gravity="center"
-                            android:text="title"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
+        <!-- Separator Line -->
+        <View
+            android:id="@+id/separatorLine"
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:background="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/titleBarLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-                        <ImageView
-                            android:id="@+id/boardSettingIcon"
-                            android:layout_width="40dp"
-                            android:layout_height="20dp"
-                            android:layout_margin="18dp"
-                            android:src="@drawable/main_menu"
-                            android:visibility="invisible"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+        <!-- Time and Text Content Area -->
+        <TextView
+            android:id="@+id/timeArea"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="end"
+            android:text="time"
+            app:layout_constraintTop_toBottomOf="@id/separatorLine"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <TextView
+            android:id="@+id/textArea"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:minHeight="80dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/background_radius"
+            android:padding="10dp"
+            android:text="여기는 내용 영역"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/timeArea"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Comments ListView -->
+        <ListView
+            android:id="@+id/commentLV"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textArea"
+            app:layout_constraintBottom_toTopOf="@id/commentInputLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/black"></androidx.appcompat.widget.LinearLayoutCompat>
-
-                <TextView
-                    android:id="@+id/timeArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:gravity="right"
-                    android:text="time" />
-
-                <TextView
-                    android:id="@+id/textArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_margin="20dp"
-                    android:background="@drawable/background_radius"
-                    android:padding="10dp"
-                    android:text="여기는 내용 영역"
-                    android:textColor="@color/black" />
-
-                <ImageView
-                    android:id="@+id/getImageArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp" />
-
-                <ListView
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/commentLV"
-                    android:layout_width="match_parent"
-                    android:layout_height="600dp" />
-
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-        </ScrollView>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
+        <!-- Comment Input Layout -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/commentInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:background="@color/white"
-            android:layout_height="60dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <EditText
                 android:id="@+id/commentArea"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:hint="댓글을 입력하세요"
                 android:background="@color/transparent"
-                android:layout_marginLeft="10dp"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"/>
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/commentBtn" />
 
             <ImageView
                 android:id="@+id/commentBtn"
                 android:src="@drawable/writebtn"
                 android:layout_width="60dp"
-                android:layout_height="60dp"/>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </RelativeLayout>
+                android:layout_height="60dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
