--- a/app/src/main/res/layout/board_list_item.xml
+++ b/app/src/main/res/layout/board_list_item.xml
@@ -2,57 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/itemView"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingStart="12dp"
+    android:paddingEnd="12dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
+
+    <!-- 태그 레이아웃 -->
+    <LinearLayout
+        android:id="@+id/tagsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <!-- 태그를 위한 TextView 여기에 추가됨-->
+    </LinearLayout>
 
     <TextView
         android:id="@+id/titleArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+
         android:text="title"
         android:textColor="@color/black"
-        android:textSize="16dp"
-        android:textStyle="bold"
-         />
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/contentArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginTop="4dp"
         android:text="content"
         android:textColor="@color/black"
-        android:textSize="12dp" />
-
+        android:textSize="14sp"
+        android:maxLines="2"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp">
 
         <TextView
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="2dp"
             android:text="userName"
             android:textColor="@color/gray"
-            android:textSize="8dp" />
-
+            android:textSize="10sp"/>
 
         <TextView
             android:id="@+id/timeArea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="16dp"
             android:text="time"
             android:textColor="@color/gray"
-            android:textSize="8dp" />
-
+            android:textSize="10sp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-
 </LinearLayout>
