--- a/app/src/main/res/layout/activity_board_inside.xml
+++ b/app/src/main/res/layout/activity_board_inside.xml
@@ -10,38 +10,55 @@
 
         <!-- Title Bar ConstraintLayout -->
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/titleBarLayout"
+            android:id="@+id/typeBarLayout"
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:background="@color/mainColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
+
+            <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_arrow"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/typeArea"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/white" />
+
             <TextView
-                android:id="@+id/titleArea"
+                android:id="@+id/typeArea"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginEnd="50dp"
-                android:gravity="center"
-                android:text="title"
-                android:textColor="@color/black"
+                android:gravity="left|center_vertical"
+                android:text="boardType"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/boardSettingIcon" />
+                app:layout_constraintEnd_toStartOf="@id/boardSettingIcon"
+                app:layout_constraintStart_toStartOf="@id/backButton"
+                app:layout_constraintTop_toTopOf="parent"
+
+                />
 
             <ImageView
                 android:id="@+id/boardSettingIcon"
                 android:layout_width="40dp"
                 android:layout_height="20dp"
                 android:layout_marginEnd="18dp"
-                android:src="@drawable/main_menu"
+                android:src="@drawable/ic_setting"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/white"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -51,48 +68,106 @@
             android:layout_width="0dp"
             android:layout_height="0.5dp"
             android:background="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/titleBarLayout"
+            app:layout_constraintTop_toBottomOf="@id/typeBarLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/titleArea"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:minHeight="20dp"
+            android:paddingTop="4dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+
+            android:text="제목"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/separatorLine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <!-- Time and Text Content Area -->
         <TextView
+            android:id="@+id/userNameArea"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:gravity="start"
+            android:text="userName"
+            app:layout_constraintTop_toTopOf="@id/timeArea"
+            app:layout_constraintBottom_toBottomOf="@id/timeArea"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/timeArea" />
+
+        <TextView
             android:id="@+id/timeArea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:paddingEnd="16dp"
             android:gravity="end"
             android:text="time"
-            app:layout_constraintTop_toBottomOf="@id/separatorLine"
+            app:layout_constraintTop_toBottomOf="@id/titleArea"
+            app:layout_constraintStart_toEndOf="@id/userNameArea"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
+        <LinearLayout
+            android:id="@+id/tagsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/timeArea"
+            >
+
+            <!-- 태그를 위한 TextView 여기에 추가됨-->
+        </LinearLayout>
+
+        <View
+            android:id="@+id/tagSeparatorLine"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/gray"
+            app:layout_constraintTop_toBottomOf="@id/tagsLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
 
         <TextView
             android:id="@+id/textArea"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="80dp"
+            android:minHeight="100dp"
             android:layout_margin="20dp"
-            android:background="@drawable/background_radius"
             android:padding="10dp"
+            android:textSize="16sp"
             android:text="여기는 내용 영역"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/timeArea"
+            app:layout_constraintTop_toBottomOf="@id/tagSeparatorLine"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <!-- Comments ListView -->
+
+        <!-- Comment Input Layout -->
         <ListView
             android:id="@+id/commentLV"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/textArea"
             app:layout_constraintBottom_toTopOf="@id/commentInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/textArea"
+            app:layout_constraintVertical_bias="1.0" />
 
-        <!-- Comment Input Layout -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/commentInputLayout"
             android:layout_width="0dp"
@@ -117,7 +192,7 @@
 
             <ImageView
                 android:id="@+id/commentBtn"
-                android:src="@drawable/ic_writebtn"
+                android:src="@drawable/ic_send"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 app:layout_constraintEnd_toEndOf="parent"
