--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="mainColor">#2A9D8F</color>
+    <color name="mainColor">#08AD5E</color>
     <color name="mainGray">#DDDDDD</color>
     <color name="transparent_ripple_color">#00000000</color>
     <color name="black">#000000</color>
     <color name="gray">#AFB2B6</color>
     <color name="light_gray">#FAFBFC</color>
-
+<!--    2A9D8F-->
 </resources>
