--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,9 @@
     <color name="black">#000000</color>
     <color name="gray">#AFB2B6</color>
     <color name="light_gray">#FAFBFC</color>
+
+    <color name="Gray_700">#6E7377</color>
+    <color name="Green_500">#2A9D8F</color>
+    <color name="Blue_500">#464AB2</color>
 <!--    2A9D8F-->
 </resources>
