--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@color/white</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -19,5 +20,11 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:textSize">15sp</item>
         <item name="android:layout_margin">10dp</item>
+    </style>
+
+    <!-- splash theme -->
+    <style name="Theme.pathfinder.splash">
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:statusBarColor">@color/Green_500</item>
     </style>
 </resources>
