--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -62,7 +62,7 @@
             android:layout_marginEnd="20dp" />
 
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/boardListView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
